Agregado conexion a HEROKU

--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.6.0</version> <!-- Asegúrate de que la versión sea la más reciente o compatible con tu proyecto -->
+		</dependency>
 	</dependencies>
 
 	<build>
